--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 clap = { version = "4.5.2", features = ["derive"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
 csv = "1.3.0"
+log = "0.4.22"
+env_logger = "0.10.0"
 
 [dependencies.uuid]
 version = "1.10.0"
