--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rand = { version = "0.8.5", features = ["small_rng"] }
 csv = "1.3.0"
 log = "0.4.22"
 env_logger = "0.10.0"
+rayon = "1.10.0"
 
 [dependencies.uuid]
 version = "1.10.0"
